Fix img jumping in navbar and font size in 600-900px

--- a/src/app/components/explore-feed/explore-feed.component.css
+++ b/src/app/components/explore-feed/explore-feed.component.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-@media (min-width: 900px)  {
+/* @media (min-width: 900px)  { */
 
 .center {
   margin-left: 18px;
@@ -43,7 +43,7 @@ ngxMasonryItem:nth-of-type(5n) {
   font-family: Arial;
   color: #4d4d4d;
 }
-}
+/* } */
 @media (max-width: 600px)  {
 
   .center {
