--- a/src/app/components/mutual-nav/mutual-nav.component.css
+++ b/src/app/components/mutual-nav/mutual-nav.component.css
@@ -296,5 +296,17 @@ span.price.max{
   span.price.max{
     float: right;
   }
+
+  button.filter-button{
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    outline:none;
+    padding: 0px 16px;
+    background: #404040;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
   
 }
