--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -153,6 +153,7 @@ display: none;
     border-radius: 20px;
     color: rgb(72,72,72);
     letter-spacing: -0.2px;
+    width:90px;
   }
 
   li.explore:hover {
@@ -160,7 +161,12 @@ display: none;
     color: rgb(82,82,82);
   }
 
-  .profile {
+  .user-image{
+    width:84px;
+    height: 40px;
+  }
+
+  img.profile {
     width: 40px;
     height: 40px;
     margin-left: 24px;
@@ -168,6 +174,7 @@ display: none;
     border: 2px solid rgba(128,128,128,0.25);
     cursor: pointer;
     margin-right: 20px;
+    background-color: transparent;
   }
 
   .profile:hover {
@@ -370,7 +377,7 @@ span.search-fullname{
   }
   
   li.explore {
-    font-size: 18px;
+    font-size: 14px;
     font-family: Roboto;
     font-weight: 400;
     cursor: pointer;
@@ -384,10 +391,15 @@ span.search-fullname{
     background-color: rgba(0,0,0,0.07);
     color: rgb(82,82,82);
   }
+
+  .user-image{
+    width:84px;
+    height: 40px;
+  }
   
-  .profile {
-    width: 26px;
-    height: 26px;
+  img.profile {
+    width: 40px;
+    height: 40px;
     margin-left: 16px;
     position: relative;
     top: 2px;
